--- a/_posts/28-02-2024-Dosa.md
+++ b/_posts/28-02-2024-Dosa.md
@@ -1,5 +1,5 @@
 ---
-title: Dosa: History & Preferences
+title: Dosa - History & Preferences
 tags: [Food, Data Visualization, History, Survey]
 style: fill
 color: secondary
