--- a/_posts/28-02-2024-Dosa.md
+++ b/_posts/28-02-2024-Dosa.md
@@ -1,16 +1,13 @@
 ---
 title: Dosa - History & Preferences
-tags: [Food, Data Visualization, History, Survey]
+tags: [Food, Data Visualization, History, Survey, Food Analytics]
 style: fill
 color: secondary
 comments: true
-description: I know there is black gold inside our earth's crust, but how often do you see the diamonds in the sky?
+description: I always wondered how old is a "Dosa"? I kept eating since my childhood and wanted to track its history and the choices of people when it comes to this dish.
 ---
 
-![preview](https://i.postimg.cc/sxFxNkz5/collection.png)
+![preview](https://i.postimg.cc/nzRbtt1c/dosa.jpg)
 
-## That sheer tranquility just amazes me!
+## An iconic South Indian Dish
 
-I don't exactly remember when I got a notification regarding Earth's big brother. Apparently, he decided to meet for a whole month. If you don't believe me you better follow [Nasa](https://science.nasa.gov/jupiter/)
-
-Just scroll down a little bit and you will see who I'm talking about!
